# stackify

./: README.md
raw/servant-pg-simple/: LICENSE  {{name}}.cabal
stackify/: stackify.cabal
stackify/app/: Main.hs
stackify/src/: Lib.hs
